--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
     <h2>PackBadgesNK dApp</h2>
   </header>
   <nav id="menu">
-    <a href="#" onclick="loginAnchor()">🔑 Connect Wallet<default>
+    <a href="#" onclick="loginAnchor()">🔑 Connect Wallet<yurgakucay21>
     <a href="https://neftyblocks.com/creator/packbadgesnk" target="_blank">🛒 Shop</a>
   </nav>
 
